# raytracer

./: CMakeLists.txt  LICENSE  README.md  cmakegen.sh
src/: aabb.h  bvh_node.h  camera.h  dielectric.h  hittable.h  image.h  lambertian.h  main.cpp  material.h  metal.h  progress_bar.h  ray.h  scene.h  sphere.h  tests.cpp  tests.h  utils.h  vector3.h
src/material/: dielectric.h  lambertian.h  material.h  metal.h
src/object/: aabb.h  bvh_node.h  hittable.h  ray.h  sphere.h  triangle.h
src/scene/: camera.h  scene.h
src/utils/: image.h  progress_bar.h  utils.h  vector3.h
